# cp-solution

./: .gitignore  CMakeLists.txt  P1000.cpp  P1008.cpp  P1035.cpp  P1085.cpp  P1421.cpp  P1422.cpp  P1423.cpp  P1909.cpp  P1980.cpp  P2141.cpp  README.md  UVA113.cpp  desktop.ini  languagePercentage.hs  package.json
solution/: .gitignore  CMakeLists.txt  G.cpp
solution/acwing/: 03.cpp  04.cpp  05.cpp  4457.cpp
solution/acwing/.cph/: .01_背包问题.cpp_e20b73bec0ef2b903b107fdc150d3582.prob  .02.opt.cpp_00d611aeb0ecb311272ab8002ab24e80.prob
solution/aoapc/: master-mind_hints.cpp  palindromes.cpp
solution/atcoder/abc236/: E.cpp
solution/cf/CodeCraft-22 and Codeforces Round #795 (Div. 2)/: B - Shoe Shuffling .cpp
solution/cf/Codeforces Round #796 (Div. 2)/: A.testcases.txt  B.testcases.txt
solution/cf/Codeforces Round #805 (Div. 3)/: C_Train_and_Queries.cpp
solution/cf/Codeforces Round #806 (Div. 4)/: C_Cypher.cpp
solution/cf/Codeforces Round #827 (Div. 4)/: C.cpp
solution/cf/Codeforces Round #832 (Div. 2)/: C_Swap_Game.cpp
solution/cf/Codeforces Round #835 (Div. 4)/: A_Medium_Number.cpp  C_hack.cpp  D_Challenging_Valleys.cpp  D_Challenging_Valleys.wa.cpp  F_Quests.wa.cpp
solution/cf/Codeforces Round #837 (Div. 2)/: A_Hossam_and_Combinatorics.cpp
solution/cf/Codeforces Round #841 (Div. 2) and Divide by Zero 2022/: A.cpp  B.cpp  B_table.txt  Bres.txt  C.cpp
solution/cf/Codeforces Round 842 (Div. 2)/: B.cpp  C.cpp
solution/cf/Codeforces Round 862 (Div. 2)/: A.cpp  B.cpp
solution/cf/Codeforeces Round 842 (Div. 2)/: C.std  D.cpp
solution/cf/Educational Codeforces Round 128 (Rated for Div. 2)/: A_Minimums_and_Maximums.cpp  C_Binary_String.cpp
solution/cf/Educational Codeforces Round 144 (Rated for Div. 2)/: A.cpp  B.cpp
solution/coder/: NC16644.cpp  Special_Jersey_Numbers.py
solution/coder/.cph/: .Brownies_vs_Candies_vs_Cookies.py_6dd97357a0cd2fa98157e05f69de3036.prob  .Medal_Ranking.py_ffc9a5294f34a99c5500ab1b01177f9b.prob  .二分.cpp_6ceb3f803e6d451536812662467ff83d.prob
solution/coder/23106/: A.tle.cpp  H.cpp  H.tle.cpp  I.cpp  J.cpp  K.cpp
solution/coder/23477/: A.mle.cpp  C.cpp  E.wa.cpp  F.cpp  K.cpp
solution/coder/23478/: G.cpp
solution/coder/30129/: B.cpp
solution/coder/33589/: M.py
solution/coder/41755/: B.cpp
solution/coder/42004/: B.cpp  D.cpp  E.cpp
solution/coder/49888/: D.cpp
solution/coder/icpc12/: K_gen_new.cpp
solution/codewars/: 24dot.hs  is_a_number_prime.cpp  roman_numerals_encoder.hs  sum_of_digits_digital_root.hs
solution/daimayuan/: 504.cpp  504.tle.cpp
solution/game/7_billion_humans/: 11.asm
solution/game/enjinia_ga_shimetsu_shita_sekai/: D4001.cpp  D5004.cpp  README.md
solution/hdu/: How_far_away.cpp  病毒侵袭.cpp
solution/hdu/.cph/: .Keywords_Search.cpp_e7f955105bf1c681bd2d1b5a79bc7c7c.prob  .敌兵布阵.cpp_7914dd7ce929b29585dde6ea7c69f975.prob
solution/help/lx/: 2021.11.10.c
solution/icpc/2020-2021 ACM-ICPC Asia Nanjing Regional Contest/: D.cpp  E.cpp  F.cpp  H.table.cpp  H.table.py  H.txt  K.cpp  L.cpp
solution/icpc/2021 Shandong Provincial Colegiate Programming Contest/: C.cpp  D.cpp
solution/icpc/2022 International Collegiate Programming Contest Jinan Site/: M.cpp
solution/icpc/ICPC 47th International Collegiate Programming Contest Asia Shenyang Regional Contest/: L2.cpp  L3.cpp
solution/icpc/The 2020 ICPC Asia Shenyang Regional Programming Contest/: B.cpp  G.cpp  K.cpp
solution/icpc/The 2021 ICPC Asia Shanghai Regional Programming Contest/: D.cpp  G.cpp
solution/icpc/The 2022 ICPC Asia Xi an Regional Contest/: J_Strange_Sum.cpp
solution/icpc/The 2022 ICPC Asia Xi'an Regional Contest Warnup/: B.cpp
solution/lanqiao/2022sim2/: q3.cpp  q6.cpp  q8.cpp
solution/lanqiao/2023lanqiao-SD/: B.cpp  Binteractive.cpp  C_1.ans  E.cpp  E.org.cpp  F.cpp  G.cpp  H.cpp
solution/leetcode-cn/: .gitignore
solution/luogu/: P1002.dp.cpp  P1023-opt.py  P1042.py  P1046.cpp  P1047.cpp  P1048.cpp  P1095.cpp  P1102.wa.cpp  P1168.cpp  P1177.hs  P1219.cpp  P1255.dec.cpp  P1305.cpp  P1307.cpp  P1425.cpp  P1470.cpp  P1502.cpp  P1803.cpp  P2196.o.cpp  P2249.cpp  P2251.cpp  P2433.cpp  P2911.cpp  P3365#re.cpp  P3371#bellman.cpp  P3371#floyd.cpp  P3372.dynamic.cpp  P3372.testcases.txt  P3373.cpp  P3375.cpp  P3386.cpp  P3388.cpp  P3388.retry.cpp  P3478.cpp  P3761.cpp  P3805.cpp  P3806.cpp  P4178.cpp  P4445.py  P4551.cpp  (+17 more)
solution/luogu/.cph/: .P1122.cpp_898327665cad398517538d6eb25bf53d.prob  .P3865.re.cpp_9af8bedebe3950c15e3c198b49296750.prob  .P_1439_模板_最长公共子序列.cpp_98cf531ae40df4270b0a4664535f9a96.prob  .P_2196_NOIP_1996_提高组_挖地雷.cpp_9265e8d94ed90d97f2c0bafc1e64c634.prob  .P_3205_HNOI_2010_合唱队.cpp_80453ff099af2c002661ba72b471d75a.prob  .U279115.cpp_5e6e711dc10b9b309f1919de0c6a8288.prob  .U_279115_小正的气球.cpp_77a8e61f25a35a702eb1c9cdd75d2f7e.prob
solution/luogu/90653/: D.cpp  T_288401_B.cpp
solution/luogu/92638/: P8871.cpp  P8872.cpp  P8873.cpp  P8875.cpp  P8876.cpp
solution/ncccu/cpp2022/: A.cpp  B.cpp
solution/poj/: Entropy.opt.cpp  Heavy_Transportation.cpp  Nearest_Common_Ancestors.cpp  Phone_List.cpp  Starts.cpp  The_Stable_Marriage_Problem.cpp  The_xor-longest_Path.cpp  p1042.cpp
solution/pta/: Maximum Subsequence Sum_2.ans  Maximum Subsequence Sum_3.ans
solution/sdufe/: 2021_11_03_T5.cpp  p3.cpp  p5.wa.cpp
solution/uva/: uva101.cpp  uva10305.cpp  uva10391.cpp  uva10474.cpp  uva10562.cpp  uva1103.cpp  uva11988.cpp  uva11988.template.cpp  uva12096.wa.cpp  uva122.cpp  uva12657.wip.tle.cpp  uva136.cpp  uva136.submit.cpp  uva156.cpp  uva1592.wa.cpp  uva1593.cpp  uva230.cpp  uva297.cpp  uva514.cpp  uva839.fast.cpp
(+2053 files in other folders)
